--- a/hiFiStyles/css/style.css
+++ b/hiFiStyles/css/style.css
@@ -13,6 +13,11 @@ Formål: HTML og CSS styletile
     --lys: #fff;
 }
 
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
 /* generelt */
 body {
     background-color: var(--lys);
@@ -20,6 +25,8 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: medium;
 }
+
+
 
 /* farveeksempler */
 #farverne {
@@ -68,11 +75,15 @@ h4,
 h5,
 h6 {
     text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 p {
     max-width: 53ch; /* ch = antal tegn pr. linje */
     margin: auto;
+    margin-top: 4px;
+    margin-bottom: 4px;
     padding: 8px;
 }
 
@@ -101,3 +112,54 @@ p {
     background-color: var(--lys);
     color: var(--moerk);
 }
+
+/* Illustrationer */
+.hero {
+    width: 100%;
+    height: 100vh;
+    background-image: url('https://multimusen.dk/wp-content/uploads/image-1-2.png');
+    color: var(--lys);
+}
+
+img {
+    width: 100%;
+}
+
+/* Layout */
+.flex {
+    display: flex;
+    justify-content: space-between;
+}
+
+/* bredder */
+.w25 {
+    width: 25%;
+}
+
+.w33 {
+    width:33%;
+}
+
+.w50 {
+    width: 50%;
+}
+
+.w75 {
+    width: 75%;
+}
+
+.w100 {
+    width: 100%;
+}
+
+/* Knapper */
+button {
+    min-width: 125px;
+    padding: 4px;
+    margin: auto;
+    margin-top: 4px;
+    margin-bottom: 4px;
+}
+
+/* Responsive regler */
+
